fix: make gcds loader visible by inverting its white color in black color

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 
 .loader {
+  filter: invert(100%);
   will-change: filter;
   transition: filter 300ms;
 }
